--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -5,13 +5,8 @@
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
   background-color: $White;
   font-family: "DM Sans", sans-serif;
   font-weight: 400;
-  background-color: #f4f0f0;
+  background-color: #fbf9f9;
 }
