--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -13,6 +13,9 @@
 .flex-jc-se {
   justify-content: space-evenly;
 }
+.flex-fw-w {
+  flex-wrap: wrap;
+}
 
 * {
   margin: 0;
@@ -21,179 +24,396 @@
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
   background-color: hsl(0, 0%, 100%);
   font-family: "DM Sans", sans-serif;
   font-weight: 400;
-  background-color: #f4f0f0;
+  background-color: #fbf9f9;
 }
 
 .container {
-  width: 60vw;
-  height: 90vh;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(10, 1fr);
-  grid-template-areas: "cp sa sa sh" "cp sa sa sh" "cp sa sa sh" "cp sa sa sh" "cp ma mn sh" "ca ma mn sh" "ca ma mn sh" "ca ag gf gf" "ca ag gf gf" "ca ag gf gf";
-  gap: 1rem;
+  width: 100vw;
 }
-.container > * {
-  border-radius: 0.3rem;
+@media (min-width: 768px) {
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
-.container .createPost {
-  background-color: hsl(31, 66%, 93%);
-  grid-area: cp;
-  padding: 2rem 1rem 2rem 2rem;
+.container_grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 0.5rem 1rem;
 }
-.container .createPost div {
-  text-align: left;
-  font-size: 2rem;
-  word-break: keep-all;
-  line-height: 0.8;
+@media (min-width: 768px) {
+  .container_grid {
+    max-width: 1024px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 296px 227px 214px;
+    grid-template-areas: "cardgrp sa sa sh" "cardgrp ma ms sh" "cardgrp ag gf gf ";
+    gap: 1rem;
+  }
 }
-.container .createPost div span {
-  font-style: italic;
-  color: hsl(256, 67%, 59%);
+.container_grid img {
+  width: 100%;
 }
-.container .createPost img {
-  width: 77%;
-  height: 32%;
-  margin: 1rem 1rem 0 0.5rem;
+.container_grid .cards {
+  margin-bottom: 1rem;
+  border-radius: 0.5rem;
+  padding: 2rem 0.6rem;
 }
-.container .socialAi {
-  background-color: hsl(256, 67%, 59%);
-  color: hsl(0, 0%, 100%);
+@media (max-width: 768px) {
+  .container_grid .cards {
+    max-width: 372px;
+  }
+}
+@media (min-width: 768px) {
+  .container_grid .cards {
+    margin-bottom: 0;
+  }
+}
+.container_grid #card1 {
   grid-area: sa;
 }
-.container .socialAi div {
-  font-size: 40px;
-  max-width: 80%;
-  text-align: center;
-  font-size: 4rem;
+@media (min-width: 768px) {
+  .container_grid #card1 {
+    padding-top: 3rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
 }
-.container .socialAi div span {
+.container_grid #card1 > :first-child {
+  font-size: 4rem;
+  text-align: center;
+  margin-bottom: 1rem;
+  line-height: 0.9;
+}
+@media (min-width: 768px) {
+  .container_grid #card1 > :first-child {
+    font-size: 3rem;
+  }
+}
+.container_grid #card1 > :first-child > :first-child {
   color: hsl(39, 100%, 71%);
 }
-.container .socialAi img {
-  width: 30%;
+.container_grid #card1 > :first-child > :last-child {
+  font-style: italic;
 }
-.container .schedule {
-  grid-area: sh;
-  background-color: hsl(254, 88%, 90%);
-  position: relative;
-  overflow: hidden;
+.container_grid #card1 img {
+  width: 60%;
 }
-.container .schedule div {
-  margin: 1.5rem 0 1.5rem 1rem;
-  font-size: 2rem;
-  width: 70%;
-  text-align: left;
-  word-break: keep-all;
-  line-height: 0.8;
+@media (min-width: 768px) {
+  .container_grid #card1 img {
+    width: 40%;
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+  }
 }
-.container .schedule img {
-  position: absolute;
-  width: 100%;
-  height: 60%;
-  left: 40%;
-  -o-object-fit: fill;
-     object-fit: fill;
-  align-self: center;
-}
-.container .schedule p {
+.container_grid #card1 p {
   font-size: 1.2rem;
-  width: 75%;
-  text-align: left;
-  word-break: keep-all;
-  line-height: 0.8;
 }
-.container .contentAI {
-  grid-area: ca;
-  background-color: hsl(39, 100%, 71%);
-  padding: 2rem 1rem 1rem 1rem;
+@media (min-width: 768px) {
+  .container_grid #card1 p {
+    font-weight: 100;
+  }
 }
-.container .contentAI p {
-  max-width: 70%;
-  text-align: left;
+.container_grid #card2 {
+  grid-area: ma;
+}
+@media (min-width: 768px) {
+  .container_grid #card2 {
+    position: relative;
+    padding-right: 0;
+    overflow: hidden;
+  }
+}
+.container_grid #card2 p {
+  margin-top: 1rem;
   font-size: 2rem;
-  word-break: keep-all;
-  line-height: 0.8;
-  align-self: flex-start;
-  padding: 2rem 0 2rem 2rem;
+  line-height: 0.9;
+  word-spacing: -4px;
 }
-.container .contentAI img {
+@media (min-width: 768px) {
+  .container_grid #card2 p {
+    padding-left: 1.2rem;
+    padding-right: 1rem;
+    font-size: 1.7rem;
+    word-break: keep-all;
+    font-weight: 500;
+  }
+}
+@media (min-width: 768px) {
+  .container_grid #card2 img {
+    width: 110%;
+    height: 30%;
+    -o-object-fit: fill;
+       object-fit: fill;
+    -o-object-position: 32px center;
+       object-position: 32px center;
+  }
+}
+.container_grid #card3 {
+  height: 300px;
+  overflow: hidden;
+  grid-area: ms;
+}
+@media (min-width: 768px) {
+  .container_grid #card3 {
+    height: auto;
+    padding-top: 1.5rem;
+    padding-left: 1.2rem;
+  }
+}
+.container_grid #card3 p {
+  font-size: 2rem;
+  line-height: 0.9;
+  word-spacing: -4px;
+  margin-bottom: 1rem;
+}
+@media (min-width: 768px) {
+  .container_grid #card3 p {
+    font-size: 1.7rem;
+    fw: 500;
+    margin-bottom: 0.5rem;
+  }
+}
+.container_grid #card3 .card3Img {
+  background-image: url(assets/images/illustration-consistent-schedule.webp);
+  width: 70%;
+  height: 100%;
+  border-radius: 16px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: top 10px center;
+}
+@media (min-width: 768px) {
+  .container_grid #card3 .card3Img {
+    width: 94%;
+    height: 66%;
+    background-size: cover;
+    background-position: top 6px center;
+  }
+}
+.container_grid #card4 {
+  text-align: center;
+  grid-area: sh;
+}
+@media (min-width: 768px) {
+  .container_grid #card4 {
+    position: relative;
+    overflow: hidden;
+    justify-content: space-around;
+    gap: 18rem;
+    padding-top: 2rem;
+    padding-bottom: 0;
+  }
+}
+.container_grid #card4 div {
+  font-size: 2rem;
+  word-spacing: -4px;
+}
+@media (min-width: 768px) {
+  .container_grid #card4 div {
+    font-size: 1.7rem;
+    font-weight: 500;
+    line-height: 0.8;
+    text-align: left;
+    margin-left: 1.5rem;
+  }
+}
+.container_grid #card4 img {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+@media (min-width: 768px) {
+  .container_grid #card4 img {
+    position: absolute;
+    height: 55%;
+    width: 130%;
+    left: 16%;
+    top: 15%;
+  }
+}
+.container_grid #card4 p {
+  font-size: 1.2rem;
+  max-width: 80%;
+}
+@media (min-width: 768px) {
+  .container_grid #card4 p {
+    max-height: 17%;
+    font-size: 1.05rem;
+    text-align: left;
+    margin-left: 1.5rem;
+    line-height: 1;
+    padding-bottom: 0;
+    margin-bottom: 0;
+  }
+}
+.container_grid #card5 {
+  grid-area: gf;
+}
+@media (min-width: 768px) {
+  .container_grid #card5 {
+    flex-wrap: wrap;
+  }
+}
+.container_grid #card5 img {
+  width: 70%;
+  margin-bottom: 1rem;
+}
+@media (min-width: 768px) {
+  .container_grid #card5 img {
+    width: 40%;
+    padding-left: 1rem;
+  }
+}
+.container_grid #card5 p {
+  margin-top: 1rem;
   width: 80%;
-  height: 70%;
+  font-size: 2.375rem;
+  text-align: center;
+}
+@media (min-width: 768px) {
+  .container_grid #card5 p {
+    font-size: 2rem;
+    width: 55%;
+    text-align: left;
+    margin-left: 1rem;
+    line-height: 0.9;
+    margin-top: 2rem;
+  }
+}
+.container_grid #card6 {
+  padding-left: 2rem;
+  grid-area: ag;
+}
+@media (min-width: 768px) {
+  .container_grid #card6 {
+    padding: 1.5rem 1rem;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    justify-items: center;
+  }
+}
+.container_grid #card6 div {
+  font-size: 4rem;
+}
+@media (min-width: 768px) {
+  .container_grid #card6 div {
+    justify-self: start;
+    font-size: 2.375rem;
+    font-weight: 500;
+  }
+}
+.container_grid #card6 p {
+  font-size: 1.2rem;
+}
+@media (min-width: 768px) {
+  .container_grid #card6 p {
+    margin-top: 0.5rem;
+    font-size: 1rem;
+  }
+}
+.container_grid #card6 img {
+  margin-top: 1rem;
+  width: 70%;
+}
+@media (min-width: 768px) {
+  .container_grid #card6 img {
+    width: 80%;
+  }
+}
+.container_grid #card7 {
+  padding-left: 2rem;
+  padding-bottom: 3rem;
+  flex: 1;
+}
+@media (min-width: 768px) {
+  .container_grid #card7 {
+    padding: 5rem 2rem 2rem;
+  }
+}
+.container_grid #card7 div {
+  font-size: 2.375rem;
+  line-height: 0.8;
+}
+@media (min-width: 768px) {
+  .container_grid #card7 div {
+    font-size: 2rem;
+    font-weight: 500;
+  }
+}
+.container_grid #card7 div span {
+  color: hsl(256, 67%, 59%);
+  font-style: italic;
+}
+.container_grid #card7 img {
+  width: 50%;
+  height: 80%;
   -o-object-fit: contain;
      object-fit: contain;
 }
-.container .manageAccount {
-  grid-area: ma;
-  background-color: hsl(0, 0%, 100%);
-  overflow: hidden;
-  align-self: center;
-  padding: 1rem;
+@media (min-width: 768px) {
+  .container_grid #card7 img {
+    margin-top: 1.5rem;
+    height: 30%;
+    width: 100%;
+  }
 }
-.container .manageAccount img {
-  width: 100%;
-  height: 70%;
-  -o-object-fit: scale-down;
-     object-fit: scale-down;
-  -o-object-position: top 0 left 2rem;
-     object-position: top 0 left 2rem;
-  margin-bottom: 1rem;
+.container_grid #card8 {
+  padding-left: 2rem;
+  flex: 1;
 }
-.container .manageAccount p {
-  font-size: 2rem;
-  width: 80%;
-  line-height: 0.8;
-  margin: 1rem;
-}
-.container .maintain {
-  grid-area: mn;
-  background-color: hsl(39, 100%, 71%);
-  overflow: hidden;
-  align-self: center;
-  padding: 1rem 1rem 0 1rem;
-}
-.container .maintain p {
-  width: 70%;
-  font-size: 2rem;
-  line-height: 0.8;
-}
-.container .maintain img {
-  width: 70%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: 0 3.5rem;
-     object-position: 0 3.5rem;
-}
-.container .audGrowth {
-  grid-area: ag;
-  background-color: hsl(0, 0%, 100%);
-}
-.container .audGrowth div {
-  font-size: 4rem;
-}
-.container .audGrowth p {
-  font-size: 1.2rem;
-}
-.container .audGrowth img {
-  width: 70%;
-}
-.container .growFollower {
-  grid-area: gf;
-  background-color: hsl(256, 67%, 59%);
-}
-.container .growFollower img {
-  width: 35%;
-}
-.container .growFollower div {
+.container_grid #card8 p {
   font-size: 2.375rem;
   line-height: 0.8;
+  margin-bottom: 1.5rem;
+}
+@media (min-width: 768px) {
+  .container_grid #card8 p {
+    font-size: 2rem;
+    font-weight: 500;
+  }
+}
+.container_grid #card8 img {
+  width: 70%;
+}
+@media (min-width: 768px) {
+  .container_grid #card8 img {
+    margin-top: 4rem;
+    width: 100%;
+  }
+}
+.container_grid .cardsGroup {
+  grid-area: cardgrp;
+}
+@media (min-width: 764px) {
+  .container_grid .cardsGroup {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+}
+.container_grid #card1,
+.container_grid #card5 {
+  background-color: hsl(256, 67%, 59%);
   color: hsl(0, 0%, 100%);
+}
+.container_grid #card2,
+.container_grid #card6 {
+  background-color: hsl(0, 0%, 100%);
+  color: hsl(0, 0%, 7%);
+}
+.container_grid #card3,
+.container_grid #card8 {
+  background-color: hsl(39, 100%, 71%);
+  color: hsl(0, 0%, 7%);
+}
+.container_grid #card4 {
+  background-color: hsl(254, 88%, 90%);
+}
+.container_grid #card7 {
+  background-color: hsl(31, 66%, 93%);
 }/*# sourceMappingURL=style.css.map */
